--- a/styles/sections/_figma.scss
+++ b/styles/sections/_figma.scss
@@ -10,7 +10,7 @@
     position: relative;
     width: 100%;
     max-width: 100%;
-    padding: 1rem;
+    padding: 1rem 0;
   }
 
   .mobile {
